--- a/TesteBC.Api/TesteBC.Api.csproj
+++ b/TesteBC.Api/TesteBC.Api.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>20f81bd8-271b-463e-a5f9-21e79b8a1e86</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
