--- a/TesteBC.Api/appsettings.Development.json
+++ b/TesteBC.Api/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "defaultCon": "server=localhost;database=testeBC;user=root;password=***********"
+    "defaultCon": "server=localhost;database=novobanco;user=root;password=PSMySQL@753159"
   }
 }
