--- a/TesteBC.Infrastructure/TesteBC.Infrastructure.csproj
+++ b/TesteBC.Infrastructure/TesteBC.Infrastructure.csproj
@@ -13,6 +13,10 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.9">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Moq" Version="4.18.4" />
     <PackageReference Include="Nunit3TestAdapter" Version="4.5.0" />
     <PackageReference Include="xunit.extensibility.core" Version="2.5.0" />
