Ajustes Caso não tenha nada cadastrado no banco

--- a/TesteBC.Api/appsettings.Development.json
+++ b/TesteBC.Api/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "defaultCon": "server=localhost;database=novobanco;user=root;password=PSMySQL@753159"
+    "defaultCon": "server=localhost;database=novoTesteBC;user=COLOQUEOUSUARIOAQUI;password=COLOQUEASENHAAQUI"
   }
 }
